--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,7 +11,7 @@ MarkupSafe==1.1.1
 mccabe==0.6.1
 pycryptodome==3.3.1
 pylint==2.3.1
-PyJWT
+python-jose[cryptography]
 six==1.12.0
 typed-ast==1.3.5
 wrapt==1.11.1
